Integrated RangeExtender-NAPT example

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,6 +95,9 @@ build_flags =
 [env:d1_mini]
 platform = espressif8266
 framework = ${common_env_data.framework}
+platform_packages =
+  framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+  mcspr/toolchain-xtensa @ 5.100200.201223
 board = d1_mini
 monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
