Added decode person gesture [0,3,X...]

--- a/platformio.ini
+++ b/platformio.ini
@@ -144,7 +144,7 @@ lib_deps =
   ${common_env_data.lib_deps_base_radar}
 
 upload_protocol = espota
-upload_port = iotdevice
+upload_port = iotdoor
 upload_flags =
   --port=8266
 
