--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ default_envs = d1_mini
 ; default_envs = d1_mini_pro
 ; default_envs = lolin_d32_pro
 ; default_envs = lolin_d32_pro_OTA
-
+; default_envs = mhetesp32minikit
 
 [common_env_data]
 framework = arduino
@@ -57,7 +57,7 @@ lib_deps_base =
   links2004/WebSockets @ ^2.3.2
   ESP8266FtpServer
   ; ESP8266_SSD1306
-  squix78/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
+  thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
   ; me-no-dev/ESP Async WebServer @ ^1.2.3 ; Until PR is not solved, use this other
   https://github.com/paclema/ESPAsyncWebServer.git#redefine-DYNAMIC_JSON_DOCUMENT_SIZE
 
@@ -66,14 +66,14 @@ lib_deps_base =
 
 lib_deps_base_esp8266 =
   ESP8266WiFi
-  ESP8266WiFiMulti
+  ; ESP8266WiFiMulti
   ESP8266WebServer
   ESPAsyncTCP
   ESP8266mDNS
 
 lib_deps_base_esp32 =
   Wifi
-  WiFiMulti
+  ; WiFiMulti
   WebServer
   AsyncTCP
   ESPmDNS
@@ -135,7 +135,6 @@ upload_speed = ${common_env_data.upload_speed}
 lib_deps =
   ${common_env_data.lib_deps_base}
   ${common_env_data.lib_deps_base_esp8266}
-  ${common_env_data.lib_deps_base_radar}
 
 build_flags =
   ${common_env_data.build_flags}
@@ -194,3 +193,27 @@ build_flags =
 
 board_build.partitions = ./board_partitions/esp32/default_16MB.csv
 ; board_build.partitions = ./board_partitions/esp32/default.csv
+
+
+[env:mhetesp32minikit]
+platform = espressif32
+board = mhetesp32minikit
+framework = ${common_env_data.framework}
+platform_packages =
+  ; framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  framework-arduinoespressif32 @ https://github.com/paclema/arduino-esp32#lwip_enabled
+  toolchain-xtensa32@2.80400  ; LWIP needs toolchain-xtensa32 >= v8.4.0
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+upload_port = COM5
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+
+build_flags =
+  ${common_env_data.build_flags}
+  -D USE_ASYNC_WEBSERVER
+  ; -D CORE_DEBUG_LEVEL=5     ;To enable ESP32 core debug
