--- a/data/config/config.json
+++ b/data/config/config.json
@@ -11,7 +11,8 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotdevice"
+    "hostname": "iotdevice",
+    "enable_NAT": false
   },
   "mqtt": {
     "enabled": false,
