Small fix serial command and Adafruit_VL53L0X dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -80,7 +80,8 @@ lib_deps_base_esp32 =
 
 lib_deps_base_radar =
   ; VL53L0X sensor:
-  adafruit/Adafruit_VL53L0X @ ^1.1.0
+  ; adafruit/Adafruit_VL53L0X @ ^1.1.0          ; This PR must be solved first: https://github.com/adafruit/Adafruit_VL53L0X/pull/45
+  https://github.com/paclema/Adafruit_VL53L0X
   ; pololu/VL53L0X@^1.2.0
 
   ; VL53L1X sensor:
@@ -241,6 +242,8 @@ upload_port = COM5
 lib_deps =
   ${common_env_data.lib_deps_base}
   ${common_env_data.lib_deps_base_esp32}
+  ${common_env_data.lib_deps_base_radar}
+  ${common_env_data.lib_deps_base_radar_esp32}
 
 build_flags =
   ${common_env_data.build_flags}
