Fix compability ROI with ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -86,10 +86,11 @@ lib_deps_base_radar =
   ; pololu/VL53L0X@^1.2.0
 
   ; VL53L1X sensor:
-  pololu/VL53L1X @ ^1.0.1
+  pololu/VL53L1X @ ^1.3.0
 
   ; VL53L1X ROI sensor:
   https://github.com/pololu/vl53l1x-st-api-arduino
+  ; https://github.com/paclema/vl53l1x-st-api-arduino#fix-wire-instance
 
 lib_deps_base_radar_esp32 =
   ; Positional servo with analog output:
@@ -112,6 +113,8 @@ build_flags =
   ; -D DEBUG_ESP_CORE           ; More debug levels here: https://docs.platformio.org/en/latest/platforms/espressif8266.html#debug-level
   ; -DDEBUG_ESP_WIFI
   ; -DDEBUG_ESP_OTA
+
+  -D I2C_BUFFER_LENGTH=512    ; To increase I2C buffer size for esp32 Wire lib. Necessary  when using vl53l1x-st-api-arduino. https://github.com/espressif/arduino-esp32/pull/5172
 
 
 
