Added board sch with 2 inputs for restart esp12

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = d1_mini
+; default_envs = d1_mini
 ; default_envs = d1_mini_OTA
 ; default_envs = d1_mini_pro
+default_envs = esp12e
 ; default_envs = lolin_d32_pro
 ; default_envs = lolin_d32_pro_OTA
 ; default_envs = mhetesp32minikit
@@ -142,6 +143,21 @@ build_flags =
 
 ; For now we can use only the half of the 16MB with this partition schema:
 board_build.ldscript = eagle.flash.8m6m.ld
+
+
+[env:esp12e]
+platform = espressif8266
+framework = ${common_env_data.framework}
+board = esp12e
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp8266}
+
+build_flags = ${common_env_data.build_flags}
+upload_port = COM10
 
 
 [env:lolin_d32_pro]
