--- a/data/config/config.json
+++ b/data/config/config.json
@@ -107,6 +107,7 @@
       "time_budget_ms": 20,
       "XSHUT_pin": 16,
       "I2c_address": 42,
+      "distance_mode": "Short",
       "distance_mode_options": [
         "Short",
         "Medium",
@@ -120,6 +121,7 @@
       "time_budget_ms": 20,
       "XSHUT_pin": 14,
       "I2c_address": 43,
+      "distance_mode": "Short",
       "distance_mode_options": [
         "Short",
         "Medium",
