Publish gps and co2 sensor data over mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -61,8 +61,11 @@ lib_deps_base =
   ; me-no-dev/ESP Async WebServer @ ^1.2.3 ; Until PR is not solved, use this other
   https://github.com/paclema/ESPAsyncWebServer.git#redefine-DYNAMIC_JSON_DOCUMENT_SIZE
 
-
   ArduinoOTA
+
+  sparkfun/SparkFun SCD30 Arduino Library @ ^1.0.12
+  mikalhart/TinyGPSPlus @ ^1.0.2
+  plerup/EspSoftwareSerial @ ^6.12.7
 
 lib_deps_base_esp8266 =
   ESP8266WiFi
