--- a/data/config/config.json
+++ b/data/config/config.json
@@ -1,7 +1,7 @@
 {
   "network": {
-    "AP_SSID": "iotdevice",
-    "AP_password": "iotdevice",
+    "AP_SSID": "iotco2tracker",
+    "AP_password": "iotco2tracker",
     "AP_channel": 6,
     "AP_SSID_hidden": false,
     "AP_max_connection": 4,
@@ -11,15 +11,14 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotdevice",
+    "hostname": "iotco2tracker",
     "enable_NAT": false
   },
   "mqtt": {
-    "enabled": false,
-    "reconnect_mqtt": false,
-    "server": "broker.ddns.net",
+    "enabled": true,
+    "reconnect_mqtt": true,
     "port": 1883,
-    "id_name": "iot-button",
+    "id_name": "iot-co2tracker",
     "enable_user_and_pass": true,
     "user_name": "user_name",
     "user_password": "user_password",
