Updated libs and use LinkedList instead SimpleList

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,17 +49,19 @@ lib_deps_base =
   ; // Using AsyncWebServer LinkedList lib can not be used because there is a class
   ; // using the same name. For that reason, for now we use SimpleList until we fix
   ; // this using namespace for example.
-  ; ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
-  https://github.com/spacehuhn/SimpleList
+  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  ; https://github.com/spacehuhn/SimpleList
 
   PubSubClient
-  ArduinoJson@>=6
+  bblanchon/ArduinoJson@>=6
   links2004/WebSockets @ ^2.3.2
   ESP8266FtpServer
   ; ESP8266_SSD1306
   thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
   ; me-no-dev/ESP Async WebServer @ ^1.2.3 ; Until PR is not solved, use this other
-  https://github.com/paclema/ESPAsyncWebServer.git#redefine-DYNAMIC_JSON_DOCUMENT_SIZE
+  https://github.com/paclema/ESPAsyncWebServer.git#namespace-ESPAsyncWebServer
+
+  ; https://github.com/paclema/WebConfigServer
 
 
   ArduinoOTA
