Ported lib dependencies and code to use WebConfigServer lib

--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -37,7 +37,9 @@
     ]
   },
   "services": {
-    "OTA": true,
+    "OTA": {
+      "enabled": true
+    },
     "FTP": {
       "enabled": true,
       "user": "paclema",
