--- a/data/config/config.json
+++ b/data/config/config.json
@@ -37,7 +37,9 @@
     ]
   },
   "services": {
-    "OTA": true,
+    "OTA": {
+      "enabled": true
+    },
     "FTP": {
       "enabled": true,
       "user": "paclema",
