--- a/platformio.ini
+++ b/platformio.ini
@@ -43,42 +43,43 @@ upload_speed = 921600
 
 ; lib_ldf_mode = deep+
 lib_deps_base =
-  FS
-  WiFiClientSecure
+  ; FS
+  ; WiFiClientSecure
 
   ; // Using AsyncWebServer LinkedList lib can not be used because there is a class
   ; // using the same name. For that reason, for now we use SimpleList until we fix
   ; // this using namespace for example.
-  ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28
+  ; ivanseidel/LinkedList @ 0.0.0-alpha+sha.dac3874d28 
+  ; LinkedList=https://github.com/ivanseidel/LinkedList.git#v1.3.2
   ; https://github.com/spacehuhn/SimpleList
 
   PubSubClient
-  bblanchon/ArduinoJson@>=6
-  links2004/WebSockets @ ^2.3.2
-  ESP8266FtpServer
+  ; bblanchon/ArduinoJson@>=6
+  ; links2004/WebSockets @ ^2.3.2
+  ; ESP8266FtpServer
   ; ESP8266_SSD1306
-  thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
+  ; thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
   ; me-no-dev/ESP Async WebServer @ ^1.2.3 ; Until PR is not solved, use this other
-  https://github.com/paclema/ESPAsyncWebServer.git#namespace-ESPAsyncWebServer
+  ; https://github.com/paclema/ESPAsyncWebServer.git#namespace-ESPAsyncWebServer
 
-  ; https://github.com/paclema/WebConfigServer
+  https://github.com/paclema/WebConfigServer
 
 
-  ArduinoOTA
+  ; ArduinoOTA
 
 lib_deps_base_esp8266 =
-  ESP8266WiFi
+  ; ESP8266WiFi
   ; ESP8266WiFiMulti
-  ESP8266WebServer
-  ESPAsyncTCP
-  ESP8266mDNS
+  ; ESP8266WebServer
+  ; ESPAsyncTCP
+  ; ESP8266mDNS
 
 lib_deps_base_esp32 =
-  Wifi
+  ; Wifi
   ; WiFiMulti
-  WebServer
-  AsyncTCP
-  ESPmDNS
+  ; WebServer
+  ; AsyncTCP
+  ; ESPmDNS
 
 
 build_flags =
