--- a/platformio.ini
+++ b/platformio.ini
@@ -252,3 +252,52 @@ build_flags =
   ${common_env_data.build_flags}
   -D USE_ASYNC_WEBSERVER
   ; -D CORE_DEBUG_LEVEL=5     ;To enable ESP32 core debug
+
+
+[env:mhetesp32devkit]
+platform = espressif32
+board = mhetesp32devkit
+framework = ${common_env_data.framework}
+platform_packages =
+  ; framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  framework-arduinoespressif32 @ https://github.com/paclema/arduino-esp32#lwip_enabled
+  toolchain-xtensa32@2.80400  ; LWIP needs toolchain-xtensa32 >= v8.4.0
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+upload_port = COM17
+monitor_port = COM17
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+
+build_flags =
+  ${common_env_data.build_flags}
+  ; -D CORE_DEBUG_LEVEL=5     ;To enable ESP32 core debug
+
+
+[env:az-delivery-devkit-v4]
+platform = espressif32
+board = az-delivery-devkit-v4
+framework = ${common_env_data.framework}
+platform_packages =
+  ; framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+  framework-arduinoespressif32 @ https://github.com/paclema/arduino-esp32#lwip_enabled
+  toolchain-xtensa32@2.80400  ; LWIP needs toolchain-xtensa32 >= v8.4.0
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+upload_port = COM6
+monitor_port = COM6
+; lib_ldf_mode = ${common_env_data.lib_ldf_mode}
+lib_deps =
+  ${common_env_data.lib_deps_base}
+  ${common_env_data.lib_deps_base_esp32}
+
+build_flags =
+  ${common_env_data.build_flags}
+  -D LED_BUILTIN=-1
+  ; -D CORE_DEBUG_LEVEL=5     ;To enable ESP32 core debug
