--- a/data/.bak/config/config.json
+++ b/data/.bak/config/config.json
@@ -1,7 +1,7 @@
 {
   "network": {
-    "AP_SSID": "iotdevice",
-    "AP_password": "iotdevice",
+    "AP_SSID": "iotco2Tracker",
+    "AP_password": "iotco2Tracker",
     "AP_channel": 6,
     "AP_SSID_hidden": false,
     "AP_max_connection": 4,
@@ -11,7 +11,7 @@
     "ip_address": "192.168.1.2",
     "subnet": "255.255.255.0",
     "dns_Server": "192.168.1.1",
-    "hostname": "iotdevice",
+    "hostname": "iotco2Tracker",
     "enable_NAT": false
   },
   "mqtt": {
@@ -19,7 +19,7 @@
     "reconnect_mqtt": false,
     "server": "broker.ddns.net",
     "port": 1883,
-    "id_name": "iot-button",
+    "id_name": "iot-co2Tracker",
     "enable_user_and_pass": true,
     "user_name": "user_name",
     "user_password": "user_password",
@@ -85,6 +85,6 @@
   "info": {
     "restart_counter": 0,
     "fw_version": "v0.1",
-    "repo": "github.com/paclema/iot_button"
+    "repo": "github.com/paclema/iot-co2Tracker"
   }
 }
